--- a/src/app/views/landing-page/landing-page.component.scss
+++ b/src/app/views/landing-page/landing-page.component.scss
@@ -65,6 +65,9 @@ app-contact-me {
   flex-direction: row !important;
 
   background-color: $jke-tertiary-color;
+  @media (max-width: 768px) {
+    // height: 500px !important;
+  }
 }
 
 app-portfolio-summary {
